creo un footer increible con mis escasos conocimientos de CSS

--- a/blogpost.html
+++ b/blogpost.html
@@ -17,5 +17,15 @@
                 Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
         </div>
     </div>
+    <footer id="container">
+        <nav>
+            <ul>
+                <li>Aviso de privacidad</li>
+                <li>Menu principal</li>
+                <li>Cookies</li>
+                <li>bloog</li>
+            </ul>
+        </nav>
+    </footer>
 </body>
 </html>
